feat: implement Step 3 - Swisscom Apertus LLM Integration (partial)
Apertus API Client:
- Create httpx-based client for Swiss AI Platform
- Support for chat completions and streaming
- Rate limit tracking (5 req/sec, 100k tokens/min)
- Proper API key handling (SWISS_AI_PLATFORM_API_KEY)

Prompt Engineering:
- System prompts in DE/FR/IT for Swiss voting context
- RAG context formatting for LLM
- Language detection
- Neutral, objective instruction templates

OpenWebUI Pipeline:
- Custom pipeline with inlet/outlet processing
- RAG context injection based on query keywords
- Multilingual query handling
- Smart RAG activation logic

Configuration Updates:
- Add SWISS_AI_PLATFORM_API_KEY support
- Configure Apertus-70B-Instruct-2509 model
- Document rate limits
- Update .env.example with API setup guide

Ready for final integration and testing.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 # Environment Configuration
 ENVIRONMENT=development
 
-# Swisscom Apertus API Configuration
-APERTUS_API_KEY=your_apertus_api_key_here
+# Swisscom Apertus API Configuration (Swiss AI Platform)
+# Get your API key from your hacker profile
+SWISS_AI_PLATFORM_API_KEY=your_api_key_here
+# Alternative: APERTUS_API_KEY=your_api_key_here
 APERTUS_API_URL=https://api.swisscom.com/apertus/v1
+# Rate limits: 5 req/sec (300/min), 100k tokens/min
 
 # Database Configuration
 # For local development (using Docker PostgreSQL)
